--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 
+.margin {
+ margin: 30px;
+}
+
+
+button {
+  background-color: white;
+  border: solid black 2px;
+  color: black;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 4px 2px;
+  border-radius: 2px;
+  margin-bottom: 10px;
+  margin-right: -10px;
+}
